--- a/project/package.json
+++ b/project/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
+    "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.2.4",
     "@mui/x-data-grid": "^5.2.1",
     "@testing-library/jest-dom": "^5.16.1",
