--- a/project/package.json
+++ b/project/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
-  "proxy": "http://itgirlschool.justmakeit.ru/api",
+  "proxy": "http://itgirlschool.justmakeit.ru",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
