--- a/project/package.json
+++ b/project/package.json
@@ -9,23 +9,16 @@
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.2.4",
     "@mui/x-data-grid": "^5.2.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "material-ui-image": "^3.3.2",
-    "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "react-scripts": "5.0.0"
   },
   "proxy": "http://itgirlschool.justmakeit.ru",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
